#22128 getting rid of warnings